[gd_scene load_steps=4 format=3 uid="uid://cqkvcpjiwp2bi"]

[ext_resource type="Theme" uid="uid://c41eoeio42wgk" path="res://resources/themes/Menu.tres" id="1_ekxnf"]
[ext_resource type="Script" uid="uid://i3gjvseefs5r" path="res://scenes/main_menu.gd" id="1_l6cm7"]
[ext_resource type="PackedScene" uid="uid://bav3x4lqudei4" path="res://scenes/confirmation_dialog.tscn" id="3_wu84c"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ekxnf")
script = ExtResource("1_l6cm7")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223529, 0.290196, 0.301961, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "title"
horizontal_alignment = 1

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "play"

[node name="Reset" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Reset"

[node name="Settings" type="CheckButton" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Visit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Visist page"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Exit"

[node name="ResetConfirmation" parent="." instance=ExtResource("3_wu84c")]
visible = false
layout_mode = 1
confirmation_text = "Are you sure you want to 
reset all your progress?"

[node name="ExitConfirmation" parent="." instance=ExtResource("3_wu84c")]
visible = false
layout_mode = 2
anchors_preset = 0
confirmation_text = "Do you want to exit game?"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_settings_toggled"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Visit" to="." method="_on_link_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="confirm" from="ResetConfirmation" to="." method="_on_reset_confirmation_confirm"]
[connection signal="confirm" from="ExitConfirmation" to="." method="_on_exit_confirmation_confirm"]
